--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-2.43MB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 16020, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
-  - {name: 🇳🇱 荷兰-887.7KB/s(Youtube:不良林), server: 213.183.59.229, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
-  - {name: 🇨🇳 中国-11.58MB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20003, type: trojan, password: 8c8578b9-3d56-425d-8bcc-880c4da3600a, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇳🇱 荷兰-840.2KB/s(Youtube:不良林), server: 213.183.59.229, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
-  - {name: 🇰🇷 韩国-19.36MB/s(Youtube:不良林), server: 61.111.128.153, port: 8888, type: ss, cipher: rc4-md5, password: Xiongmao@^ios.ss}
+  - {name: 🇨🇳 中国-12.25MB/s(Youtube:不良林), server: in03.dns2333.xyz, port: 63004, type: vmess, uuid: 26cda94e-fb7a-3ce3-9cca-d110505ad8be, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: in03.dns2333.xyz}}
+  - {name: 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-3.18MB/s(Youtube:不良林), server: s1.upyun.online, port: 12340, type: trojan, password: c0276440-f163-4f40-a08c-78b158ce6c4f, sni: s1.upyun.online, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-12.41MB/s(Youtube:不良林), server: fkgfw-prod.i.sxl.cn, port: 443, type: ss, cipher: aes-256-cfb, password: E4DNMf73kHPrd8Qq7aqGPf7f}
+  - {name: 🇨🇳 中国-1.78MB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 16030, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
   - {name: 🇳🇱 荷兰-1.21MB/s(Youtube:不良林), server: 213.183.59.229, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
   - {name: 🇳🇱 荷兰-498.8KB/s(Youtube:不良林), server: 213.183.59.229, port: 9005, type: ss, cipher: aes-256-cfb, password: ZET59LF6DvCC8KVt}
   - {name: 🇦🇺 澳大利亚-1.91MB/s(Youtube:不良林), server: neteasy.cf, port: 45929, type: trojan, password: 2XWUtOT64u, sni: neteasy.cf, skip-cert-verify: true}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.43MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-887.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.58MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-840.2KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-19.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.25MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.78MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.21MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-498.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.91MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-2.43MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-887.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.58MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-840.2KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-19.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.25MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.78MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.21MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-498.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.91MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.43MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-887.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.58MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-840.2KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-19.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.25MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.78MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.21MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-498.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.91MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-2.43MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-887.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.58MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-840.2KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-19.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.25MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.78MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.21MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-498.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.91MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.43MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-887.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.58MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-840.2KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-19.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.25MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.78MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.21MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-498.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.91MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.43MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-887.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.58MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-840.2KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-19.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.25MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.78MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.21MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-498.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.91MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.43MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-887.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.58MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-840.2KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-19.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.25MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.78MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.21MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-498.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.91MB/s(Youtube:不良林)
