--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-12.25MB/s(Youtube:不良林), server: in03.dns2333.xyz, port: 63004, type: vmess, uuid: 26cda94e-fb7a-3ce3-9cca-d110505ad8be, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: in03.dns2333.xyz}}
-  - {name: 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-3.18MB/s(Youtube:不良林), server: s1.upyun.online, port: 12340, type: trojan, password: c0276440-f163-4f40-a08c-78b158ce6c4f, sni: s1.upyun.online, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-12.41MB/s(Youtube:不良林), server: fkgfw-prod.i.sxl.cn, port: 443, type: ss, cipher: aes-256-cfb, password: E4DNMf73kHPrd8Qq7aqGPf7f}
-  - {name: 🇨🇳 中国-1.78MB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 16030, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
-  - {name: 🇳🇱 荷兰-1.21MB/s(Youtube:不良林), server: 213.183.59.229, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
-  - {name: 🇳🇱 荷兰-498.8KB/s(Youtube:不良林), server: 213.183.59.229, port: 9005, type: ss, cipher: aes-256-cfb, password: ZET59LF6DvCC8KVt}
-  - {name: 🇦🇺 澳大利亚-1.91MB/s(Youtube:不良林), server: neteasy.cf, port: 45929, type: trojan, password: 2XWUtOT64u, sni: neteasy.cf, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-402.7KB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
   - {name: 🇬🇧 英国-9.73MB/s(Youtube:不良林), server: jgwcc1.gaox.ml, port: 443, type: trojan, password: 7118b5f4-0ea4-4c11-be7f-11471cb91e4a, sni: jgwcc1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.80MB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 16030, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
+  - {name: 🇨🇳 中国-9.61MB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 16000, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
+  - {name: 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林), server: neteasy.cf, port: 45929, type: trojan, password: 2XWUtOT64u, sni: neteasy.cf, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-3.06MB/s(Youtube:不良林), server: 198.57.27.172, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇨🇦 加拿大-2.83MB/s(Youtube:不良林), server: 198.57.27.172, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇨🇦 加拿大-3.00MB/s(Youtube:不良林), server: 198.57.27.172, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇨🇦 加拿大-1.05MB/s(Youtube:不良林), server: 198.57.27.172, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇬🇧 英国-2.59MB/s(Youtube:不良林), server: jgwld4.gaox.ml, port: 443, type: trojan, password: 58d32c66-43b1-4561-9951-d87c9123774e, sni: jgwld4.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-12.25MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.78MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.21MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-498.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-402.7KB/s(Youtube:不良林)
       - 🇬🇧 英国-9.73MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.61MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.06MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.83MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.00MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.59MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-12.25MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.78MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.21MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-498.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-402.7KB/s(Youtube:不良林)
       - 🇬🇧 英国-9.73MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.61MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.06MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.83MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.00MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.59MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-12.25MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.78MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.21MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-498.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-402.7KB/s(Youtube:不良林)
       - 🇬🇧 英国-9.73MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.61MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.06MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.83MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.00MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.59MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-12.25MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.78MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.21MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-498.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-402.7KB/s(Youtube:不良林)
       - 🇬🇧 英国-9.73MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.61MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.06MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.83MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.00MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.59MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-12.25MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.78MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.21MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-498.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-402.7KB/s(Youtube:不良林)
       - 🇬🇧 英国-9.73MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.61MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.06MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.83MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.00MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.59MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-12.25MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.78MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.21MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-498.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-402.7KB/s(Youtube:不良林)
       - 🇬🇧 英国-9.73MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.61MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.06MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.83MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.00MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.59MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-12.25MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.78MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.21MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-498.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-402.7KB/s(Youtube:不良林)
       - 🇬🇧 英国-9.73MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.61MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.06MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.83MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.00MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.59MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
