--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -6,15 +6,15 @@ log-level: info
 external-controller: :9090
 proxies:
   - {name: 🇬🇧 英国-9.73MB/s(Youtube:不良林), server: jgwcc1.gaox.ml, port: 443, type: trojan, password: 7118b5f4-0ea4-4c11-be7f-11471cb91e4a, sni: jgwcc1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.80MB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 16030, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
-  - {name: 🇨🇳 中国-9.61MB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 16000, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
-  - {name: 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林), server: neteasy.cf, port: 45929, type: trojan, password: 2XWUtOT64u, sni: neteasy.cf, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-3.06MB/s(Youtube:不良林), server: 198.57.27.172, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇨🇦 加拿大-2.83MB/s(Youtube:不良林), server: 198.57.27.172, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇨🇳 台湾-11.95MB/s(Youtube:不良林), server: tw.node.qchwnd.moe, port: 44608, type: trojan, password: d4fd37ae-893c-4486-b59a-da43ce2ae0f9, sni: tw.node.qchwnd.moe, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-3.06MB/s(Youtube:不良林), server: s3.upyun.online, port: 12340, type: trojan, password: c0276440-f163-4f40-a08c-78b158ce6c4f, sni: s3.upyun.online, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-469.6KB/s(Youtube:不良林), server: jgwld2.gaox.ml, port: 443, type: trojan, password: d7fd8aaa-4581-4281-80aa-4b63e5e1f157, sni: jgwld2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-15.95MB/s(Youtube:不良林), server: in02.dns2333.xyz, port: 63087, type: vmess, uuid: 26cda94e-fb7a-3ce3-9cca-d110505ad8be, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /mugua, ws-headers: {Host: in02.dns2333.xyz}}
   - {name: 🇨🇦 加拿大-3.00MB/s(Youtube:不良林), server: 198.57.27.172, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
   - {name: 🇨🇦 加拿大-1.05MB/s(Youtube:不良林), server: 198.57.27.172, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
   - {name: 🇬🇧 英国-2.59MB/s(Youtube:不良林), server: jgwld4.gaox.ml, port: 443, type: trojan, password: 58d32c66-43b1-4561-9951-d87c9123774e, sni: jgwld4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-2.42MB/s(Youtube:不良林), server: sg.sharecentrepro.tk, port: 443, type: trojan, password: sharecentre, sni: sg.sharecentrepro.tk, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-509.6KB/s(Youtube:不良林), server: iepl7.dcnode.me, port: 10037, type: ss, cipher: aes-128-gcm, password: d307b05c-2341-4ffa-b376-9d3a46cf7ac9}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
@@ -22,30 +22,30 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇬🇧 英国-9.73MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.61MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.06MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.83MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-11.95MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.06MB/s(Youtube:不良林)
+      - 🇬🇧 英国-469.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.95MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.00MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.59MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-509.6KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
       - 🇬🇧 英国-9.73MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.61MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.06MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.83MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-11.95MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.06MB/s(Youtube:不良林)
+      - 🇬🇧 英国-469.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.95MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.00MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.59MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-509.6KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
@@ -53,19 +53,20 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇬🇧 英国-9.73MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.61MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.06MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.83MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-11.95MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.06MB/s(Youtube:不良林)
+      - 🇬🇧 英国-469.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.95MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.00MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.59MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-509.6KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-11.95MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
@@ -73,30 +74,30 @@ proxy-groups:
       - 🎯 全球直连
       - 🔰 节点选择
       - 🇬🇧 英国-9.73MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.61MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.06MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.83MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-11.95MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.06MB/s(Youtube:不良林)
+      - 🇬🇧 英国-469.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.95MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.00MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.59MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-509.6KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - 🇬🇧 英国-9.73MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.61MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.06MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.83MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-11.95MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.06MB/s(Youtube:不良林)
+      - 🇬🇧 英国-469.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.95MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.00MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.59MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-509.6KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
@@ -104,15 +105,15 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇬🇧 英国-9.73MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.61MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.06MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.83MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-11.95MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.06MB/s(Youtube:不良林)
+      - 🇬🇧 英国-469.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.95MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.00MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.59MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-509.6KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,15 +130,15 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇬🇧 英国-9.73MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.61MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.06MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.83MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-11.95MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.06MB/s(Youtube:不良林)
+      - 🇬🇧 英国-469.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.95MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.00MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.59MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-509.6KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
